src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Catogry__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Sucture</fullName>
                </value>
                <value>
                    <fullName>OS</fullName>
                </value>
                <value>
                    <fullName>DBMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Time__c</fullName>
        <label>Current Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Date_With_Time__c</fullName>
        <label>Date With Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eighteen_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eighteen Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Detail__c</fullName>
        <label>Family Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Father_name__c</fullName>
        <label>Father name</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Linkdln__c</fullName>
        <label>Linkdln</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <label>Marks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_no__c</fullName>
        <label>Mobile no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <label>Subjects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Bio</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>english</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <label>Today Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Percent__c</fullName>
        <label>Total Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>